# design-patterns-study

./: CMakeLists.txt  README.md  main.cpp
.circleci/: config.yml
AbstractFactory/: IDBCommand.h  IDBConnection.h  IDBExcute.h  IDBFactory.h  MysqlCommand.cpp  MysqlCommand.h  MysqlConnection.cpp  MysqlConnection.h  MysqlDBFactory.cpp  MysqlDBFactory.h  MysqlExcute.cpp  MysqlExcute.h  SqlCommand.cpp  SqlCommand.h  SqlConnection.cpp  SqlConnection.h  SqlDBFactory.cpp  SqlDBFactory.h  SqlExcute.cpp  SqlExcute.h
Brigde/: Messager.h  MessagerImp.h  MessagerLite.cpp  MessagerLite.h  MessagerPerfect.cpp  MessagerPerfect.h  MobileMessagerBase.cpp  MobileMessagerBase.h  PcMessagerBase.cpp  PcMessagerBase.h
Factory/: BinaryFactory.cpp  BinaryFactory.h  BinarySplitter.cpp  BinarySplitter.h  Factory.h  ISplitter.h  TextFactory.cpp  TextFactory.h  TextSplitter.cpp  TextSplitter.h
